test/parser/should_fail/expr6.souc.bad

import Import

main() = do
	print (expr++
end main
